kube/db-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  namespace: obeder
spec:
  replicas: 1
  template:
    metadata:
      name: db
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: "postgres"
        ports:
        - containerPort: 5432
