kube/redis-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
  namespace: obeder
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
