kube/scheduler-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: scheduler
  namespace: obeder
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: obeder
    spec:
      containers:
        - name: scheduler
          image: "docker-registry.restr.im:5000/obeder/web:latest"
          command: ["/bin/sh","-c"]
          args: [ "clockwork clock.rb" ]
