kube/web-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: obeder
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: obeder
    spec:
      containers:
      - name: obeder
        image: "docker-registry.restr.im:5000/obeder/web:latest"
        command: ["/bin/sh","-c"]
        args: [ "bundle && rake db:create db:migrate db:seed && rm -f tmp/pids/server.pid && rails s -b '0.0.0.0'" ]
        ports:
        - containerPort: 3000
