kube/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: obeder
spec:
  clusterIP: None
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
