kube/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: obeder
spec:
  ports:
    - port: 80
  selector:
    app: nginx
