kube/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: obeder
spec:
  clusterIP: None
  ports:
    - port: 6379
  selector:
    app: redis
