kube/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: obeder
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: obeder
