kube/nginx-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ipsNeeded: "1"
  name: nginx
  namespace: obeder
spec:
  backend:
    serviceName: nginx
    servicePort: 1
